--- a/lib/stylesheets/default.css
+++ b/lib/stylesheets/default.css
@@ -33,6 +33,7 @@
 html {
     background-color: #191919;
 }
+
 body {
     padding: 0;
     margin: 0;
@@ -47,7 +48,6 @@ header {
     padding-bottom: 8px;
     justify-content: space-between;
     height: auto;
-    background-color: #191919;
 }
 
 nav {
@@ -57,7 +57,7 @@ nav {
 
 #home-button {
     font-family: "Roboto", serif;
-    background: linear-gradient(0.2turn, #ff3428, blueviolet);
+    background: linear-gradient(0.2turn, #6fb5ff, #4067ef);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: normal;
@@ -89,7 +89,7 @@ nav * {
     margin-right: 20px;
     font-family: "Roboto", serif;
 
-    background: linear-gradient(-0.55turn, #002d5e, #30eec2);
+    background: linear-gradient(0.55turn, #6454f5, #78a7f5);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
@@ -116,12 +116,10 @@ nav *:hover {
 
     #top-bar {
         z-index: 3;
-        background-color: #191919;
     }
 
     nav {
         z-index: 2;
-        background-color: #191919;
         display: flex;
         flex-direction: column;
     }
@@ -154,7 +152,6 @@ nav *:hover {
 
 main {
     flex-direction: column;
-    padding-top: 50px;
 }
 
 button {
