--- a/lib/stylesheets/default.css
+++ b/lib/stylesheets/default.css
@@ -126,7 +126,7 @@ nav *:hover {
 
 
     nav {
-        transform: translateY(-100px);
+        transform: translateX(-100vw);
     }
 
     nav[state=hidden] {
