--- a/site/Projects/stylesheets/projects.css
+++ b/site/Projects/stylesheets/projects.css
@@ -1,7 +1,7 @@
 
 @font-face {
   font-family: Roboto;
-  src: url("../../fonts/Roboto-Regular.ttf") format("truetype");
+  src: url("../../../fonts/Roboto-Regular.ttf") format("truetype");
 }
 
 * {
@@ -54,6 +54,10 @@ body {
 }
 
 .project:hover[state=focused] {
+    cursor: default;
+}
+
+.project:hover[state=focused] {
     border-style: solid;
     border-radius: 3px;
     border-width: 2px;
@@ -68,20 +72,48 @@ body {
 
 .project h2 {
     color: #f3eedd;
-    font-size: 16px;
+    font-size: 24px;
 }
 .project * {
     color: #f3eedd;
-    font-size: 12px;
+    font-size: 16px;
 }
 
 .project img {
     max-width: 40%;
-    min-width: 250px;
+    min-width: min(250px, 95%);
     width: auto;
     height: auto;
     margin: 10px 10px 10px 10px;
+
 }
+
+.project * a {
+    background-color: #ffffff22;
+    border-style: solid;
+    border-color: #00000000;
+    border-width: 2px;
+    border-radius: 6px;
+    padding: 5px 10px 5px 10px;
+    font-size: 15px;
+    font-weight: bold;
+    text-decoration: None;
+    position: relative;
+    float: right;
+    transition: 300ms;
+}
+
+.project * a:hover {
+    background-color: #ffffff22;
+    border-style: solid;
+    border-color: #6640ef;
+    border-width: 2px;
+    border-radius: 6px;
+    transition: 300ms;
+
+}
+
+
 
 .project-descr {
     display: flex;
