--- a/site/Education/stylesheets/education.css
+++ b/site/Education/stylesheets/education.css
@@ -4,24 +4,17 @@
   src: url("../../../fonts/Roboto-Regular.ttf") format("truetype");
 }
 
-main {
-    position: relative;
-    top: 70px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: start;
-}
-
 #CVbutton {
+    position: fixed;
+    right: 5px;
+    bottom: 5px;
     font-family: Roboto, serif;
     border-style: solid;
     border-radius: 3px;
-    border-color: #4067ef00;
+    border-color: #4067efFF;
     border-width: 2px;
     font-size: 30px;
     text-decoration: none;
-    font-weight: bold;
     color: #f3eedd;
     padding: 10px 20px 10px 20px;
     transition: 300ms;
@@ -30,7 +23,93 @@ main {
 #CVbutton:hover {
     border-style: solid;
     border-radius: 3px;
-    border-color: #4067efFF;
+    border-color: #ec6957;
     border-width: 2px;
     transition: 300ms;
 }
+
+
+@font-face {
+  font-family: Roboto;
+  src: url("../../../fonts/Roboto-Regular.ttf") format("truetype");
+}
+
+* {
+    font-family: Roboto, serif;
+}
+body {
+    all: unset;
+}
+
+.school-list {
+    position: absolute;
+    top: 80px;
+    justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+    z-index: 2;
+    column-gap: 4%;
+}
+
+.school {
+    background-color: #202020BB;
+    width: 90%;
+    padding: 50px 20px 5% 20px;
+    margin: 20px 10px 20px 10px;
+    border-style: solid;
+    border-radius: 3px;
+    border-color: #202020BB;
+    border-width: 2px;
+    transition: 500ms;
+    overflow-y: clip;
+}
+
+.school:hover h1 {
+    color: #6454f5;
+    transition: 1s;
+}
+
+.header-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.school:hover {
+    border-style: solid;
+    border-radius: 3px;
+    border-width: 2px;
+    border-color: #4067efFF;
+    transition: 300ms;
+}
+
+.school h1 {
+    color: #f3eedd;
+    font-size: 30px;
+}
+
+.school h2 {
+    color: #f3eedd;
+    font-size: 24px;
+}
+.school {
+    color: #f3eedd;
+    font-size: 16px;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.media-list {
+    margin: 10px 10px 10px 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.school h6 {
+    color: #e7cccc;
+    font-size: 17px;
+    margin: 15px 0 0 0;
+    font-weight: bold;
+}
+
