--- a/site/Projects/stylesheets/projects.css
+++ b/site/Projects/stylesheets/projects.css
@@ -11,6 +11,10 @@ body {
     all: unset;
 }
 
+main {
+    z-index: -1;
+}
+
 .project-list {
     justify-content: space-around;
     display: flex;
@@ -29,7 +33,7 @@ body {
     border-color: #202020BB;
     border-width: 2px;
     transition: 500ms;
-    overflow: clip;
+    overflow-y: clip;
 }
 
 .header-container {
@@ -112,11 +116,13 @@ body {
 }
 
 *[state=hidden][reverse] {
+    display: initial;
     transition: 300ms;
     transform: translate(0, 0);
 }
 
 *[state=shown][reverse] {
+    display: none;
     transform: translate(-200vh, 0);
     transition: 300ms;
 }
@@ -129,6 +135,11 @@ body {
     height: auto;
     margin: 5px 5px 5px 5px;
 }
+
+*[small] {
+    flex-shrink: 0;
+}
+
 
 .project * a {
     background-color: #ffffff22;
@@ -148,7 +159,7 @@ body {
 .project * a:hover {
     background-color: #ffffff22;
     border-style: solid;
-    border-color: #6640ef;
+    border-color: #ec6957;
     border-width: 2px;
     border-radius: 6px;
     transition: 300ms;
