--- a/lib/stylesheets/default.css
+++ b/lib/stylesheets/default.css
@@ -31,14 +31,23 @@
 
 
 html {
-  background-color: #191919;
+    background-color: #191919;
+    font-size: 15px;
+
 }
+
+@media screen and (max-width: 500px) {
+     html {
+        font-size: 11px;
+    }
+}
+
 
 body {
     padding: 0;
     margin: 0;
     height: 100vh;
-    overflow: clip;
+    overflow: hidden;
 }
 
 header {
@@ -53,6 +62,7 @@ header {
 nav {
     display: flex;
     justify-content: space-around;
+    height: calc(2rem + 20px);
 }
 
 #home-button {
@@ -62,7 +72,7 @@ nav {
     -webkit-text-fill-color: transparent;
     font-weight: normal;
     text-decoration: None;
-    font-size: 30px;
+    font-size: 2rem;
     margin-left: 10px;
     padding: 10px 5px 5px 10px;
     border-radius: 20px;
@@ -72,6 +82,7 @@ nav {
 #top-bar {
     display: flex;
     justify-content: space-between;
+    height: calc(2rem + 20px);
 }
 
 #top-bar:hover {
@@ -95,7 +106,7 @@ nav * {
 
     font-weight: normal;
     text-decoration: None;
-    font-size: 25px;
+    font-size: 1.7rem;
     padding: 10px 5px 5px 10px;
     border-radius: 20px;
 }
@@ -160,7 +171,7 @@ button {
     background-color: white;
     font-weight: normal;
     text-decoration: None;
-    font-size: 30px;
+    font-size: 2rem;
     margin-left: 10px;
     padding: 5px 5px 10px 10px;
     border-radius: 20px;
