--- a/site/Projects/stylesheets/projects.css
+++ b/site/Projects/stylesheets/projects.css
@@ -38,7 +38,6 @@ main {
     background-color: #202020BB;
     max-width: 60%;
     min-width: min(calc(100% - 4rem), 500px);
-    height: 40rem;
     padding: 1rem 1rem 1rem 1rem;
     margin: 1rem 1rem 1rem 1rem;
     border-style: solid;
@@ -46,7 +45,7 @@ main {
     border-color: #202020BB;
     border-width: 2px;
     transition: 500ms;
-    overflow: scroll;
+    #overflow: scroll;
 }
 
 .header-container {
@@ -60,7 +59,7 @@ main {
     border-style: solid;
     border-radius: 3px;
     border-width: 2px;
-    border-color: #4067efFF;
+    border-color: #ec6957;
     transition: 300ms;
 }
 
@@ -71,7 +70,7 @@ main {
     max-width: 100vw;
     border-style: solid;
     border-radius: 3px;
-    border-color: #4067efFF;
+    border-color: #ec6957;
     border-width: 2px;
     transition: 300ms;
     flex-grow: 3;
@@ -88,7 +87,7 @@ main {
     cursor: default;
     border-radius: 3px;
     border-width: 2px;
-    border-color: #4067efFF;
+    border-color: #ec6957;
     transition: 300ms;
 );
 }
@@ -122,12 +121,13 @@ main {
     align-items: center;
 }
 
+
 *[state=shown] {
     transition: 300ms;
 }
 
 *[state=hidden] {
-    transform: translateY(200vh);
+    transform: translateX(-100vw);
     transition: 300ms;
 }
 
@@ -148,7 +148,8 @@ main {
 }
 
 .project img {
-    max-width: 40%;
+    max-width: 60%;
+    max-height: 100%;
     min-width: min(500px, 95%);
     width: auto;
     height: auto;
@@ -182,7 +183,7 @@ main {
 }
 
 .project h6 {
-    color: #c0b1e8;
+    color: #e0b889;
     font-size: 17px;
     margin: 15px 0 0 0;
     font-weight: bold;
@@ -197,4 +198,86 @@ main {
 }
 
 
+
+
+
+.slider-wrapper {
+    margin-left: 20%;
+    margin-right: 20%;
+    position: relative;
+        overflow: hidden;
+    max-width: min(1000px, 95%);
+    max-height: 20%;
+    min-width: min(500px, 95%);
+    width: auto;
+    height: auto;
+}
+
+.slides-container {
+  height: auto;
+  width: auto;
+  max-width: 100%;
+  max-height: 100%;
+  display: flex;
+  overflow: scroll;
+  scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+}
+
+.slides-container img {
+    margin: 0 0 0 0;
+}
+
+.slide-arrow {
+  position: absolute;
+  display: flex;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 3rem;
+  background-color: #3a3a3a;
+  border: none;
+  width: 2rem;
+  font-size: 2rem;
+  padding: 0;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: opacity 100ms;
+}
+
+.slide-arrow:hover {
+  opacity: 1;
+}
+
+.slide-arrow-prev {
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding-left: 0.25rem;
+  border-radius: 1rem;
+}
+
+.slide-arrow-next {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding-left: 0.75rem;
+  border-radius: 1rem;
+}
+
+.slide {
+  width: 100%;
+  height: 100%;
+  flex: 1 0 100%;
+}
+
+.slides-container {
+    scrollbar-width: none
+}
+
+.slides-container::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
 
