--- a/lib/stylesheets/default.css
+++ b/lib/stylesheets/default.css
@@ -25,8 +25,8 @@
 }
 
 @font-face {
-  font-family: Roboto;
-  src: url("../../fonts/Roboto-Regular.ttf") format("truetype");
+  font-family: Raleway;
+  src: url("../../fonts/Raleway-Regular.ttf") format("truetype");
 }
 
 
@@ -57,6 +57,8 @@ header {
     justify-content: space-between;
     height: auto;
     background-color: rgba(25, 25, 25, 0.62);
+    cursor: default;
+
 }
 
 header:hover {
@@ -73,8 +75,8 @@ nav {
 }
 
 #home-button {
-    font-family: "Roboto", serif;
-    background: linear-gradient(0.2turn, #d30404, #efb445);
+    font-family: "Raleway", serif;
+    background: #ef4040;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: normal;
@@ -107,9 +109,9 @@ nav {
 
 nav * {
     margin-right: 20px;
-    font-family: "Roboto", serif;
+    font-family: "Raleway", serif;
 
-    background: linear-gradient(0.55turn, #d30404, #efb445);
+    background: #ef4040;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
@@ -180,7 +182,7 @@ main {
 }
 
 button {
-    font-family: "Roboto", serif;
+    font-family: "Raleway", serif;
     color: #e6ccb6;
     background-color: white;
     font-weight: normal;
