--- a/site/Projects/stylesheets/projects.css
+++ b/site/Projects/stylesheets/projects.css
@@ -277,6 +277,7 @@ main {
   top: 0;
   padding-left: 0.25rem;
   border-radius: 1rem;
+      touch-action: manipulation;
 }
 
 .slide-arrow-next {
@@ -285,6 +286,7 @@ main {
   top: 0;
   padding-left: 0.75rem;
   border-radius: 1rem;
+touch-action: manipulation;
 }
 
 .slide {
